Revision history for perl distribution Mojolicious-Plugin-AssetPack

1.31 Not Released
 - Fix generating favicons once with MOJO_ASSETPACK_LAZY

1.30 2016-12-23T03:14:34+0100
 - Fix CoffeeScript, by changing to coffee-script npm package
 - Fix "Unable to download" messages after downloaded sass file #107
 - Add EXPERIMENTAL support for MOJO_ASSETPACK_LAZY=1
 - Marked AssetPack::Asset::mtime() as deprecated

1.29 2016-12-15T23:04:40+0100
 - Fix custom helper name #111

1.28 2016-11-24T10:51:55+0100
 - Fix resetting end_range and start_range after a "Range: bytes=..." request #109

1.27 2016-11-18T15:13:55+0100
 - Add custom 404 page when an asset could not be found

1.26 2016-11-13T17:50:42+0100
 - Change Pipe::Fetch to avoid fetching URL that start with "#" #108

1.25 2016-10-30T21:24:48+0100
 - Add end_range(), start_range() and is_range() to Asset #104

1.24 2016-09-11T17:22:08+0200
 - Forgot to delete t/sass-current-app.t after 1.23

1.23 2016-09-11T17:01:57+0200
 - Add EXPERIMENTAL support for mixing in dynamic SASS files

1.22 2016-09-02T14:27:42+0200
 - Fix showing error message when asset could not be found

1.21 2016-08-29T15:48:01+0200
 - Add support for merging assetpack.db files

1.20 2016-08-19T15:11:58+0200
 - Add EXPERIMENTAL Mojolicious::Plugin::AssetPack::Pipe::TypeScript
 - Will default to "==" test when checking mode in assetpack.def
 - Moved Backcompat to the Mojolicious-Plugin-AssetPack-Backcompat dist

1.19 2016-08-10T19:14:16+0200
 - Add EXPERIMENTAL support for compiling .vue (Vue.js) files

1.18 2016-07-25T17:52:06+0200
 - Fix Can't locate object method "authority" via package "Mojo::URL" #102

1.17 2016-07-18T18:43:23+0200
 - Removed Mojolicious::Plugin::AssetPack::Asset::tag_helper()
 - Add Mojolicious::Plugin::AssetPack::tag_for()
 - Add Mojolicious::Plugin::AssetPack::Asset::url_for()
 - Add EXPERIMENTAL Mojolicious::Plugin::AssetPack::Pipe::Favicon
 - Add support for gif, ico, mp3, mp4, ogg, ogv, svg and webm.
