@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 1.31 Not Released
  - Fix generating favicons once with MOJO_ASSETPACK_LAZY
+ - Made Reloader call process() later
 
 1.30 2016-12-23T03:14:34+0100
  - Fix CoffeeScript, by changing to coffee-script npm package
